@@ -44,7 +44,8 @@ d_fnc_gettoppplayers = compileFinal "
 			{
 				_x set [1, (_x # 1) call d_fnc_convtime];
 			} forEach _dbresult;
-			missionNamespace setVariable ['d_top10_db_players', _dbresult, true];
+			d_top10_db_players_serv = _dbresult;
+			objNull spawn d_fnc_sendtopplayers;
 		};
 	}];
 ";
