@@ -267,6 +267,8 @@ class CfgRemoteExec {
 		class d_fnc_makebarmhqwait {allowedTargets = 1;};
 		class d_fnc_slopilot {allowedTargets = 2;};
 		class d_fnc_addplscore {allowedTargets = 2;};
+		class d_fnc_receivetop {allowedTargets = 1;};
+		class d_fnc_sendtopplayers {allowedTargets = 2;};
 #ifdef __TT__
 		class d_fnc_plcheckkillblufor {allowedTargets = 2;};
 		class d_fnc_plcheckkillopfor {allowedTargets = 2;};
