@@ -90,7 +90,8 @@ if (d_database_found) then {
 				{
 					_x set [1, (_x # 1) call d_fnc_convtime];
 				} forEach _dbresult;
-				missionNamespace setVariable ["d_top10_db_players", _dbresult, true];
+				d_top10_db_players_serv = _dbresult;
+				//missionNamespace setVariable ["d_top10_db_players", _dbresult, true];
 
 				0 spawn d_fnc_dbtoppasync;
 			};
