@@ -14865,6 +14865,18 @@
 <Chinese>Enemy mercenaries (2035 only)</Chinese>
 <French>Enemy mercenaries (2035 only)</French>
 </Key>
+<Key ID="STR_DOM_MISSIONSTRING_2093">
+<English>No Data Available Yet</English>
+<Spanish>No Data Available Yet</Spanish>
+<Portuguese>No Data Available Yet</Portuguese>
+<Korean>No Data Available Yet</Korean>
+<Japanese>No Data Available Yet</Japanese>
+<Original>No Data Available Yet</Original>
+<Russian>No Data Available Yet</Russian>
+<Chinesesimp>No Data Available Yet</Chinesesimp>
+<Chinese>No Data Available Yet</Chinese>
+<French>No Data Available Yet</French>
+</Key>
 </Container>
 </Package>
 </Project>
